2019-05-10  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/sys-stm32f103.c: SYS version 4.0.
	* mcu/sys-gnu-linux.c: Likewise.
	* mcu/sys-mkl27z.c: Likewise.
	* mcu/sys-stm32l4.c: Likewise.
	* mcu/sys-stm32f0.c: Likewise.

2019-05-08  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/sys-stm32f103.c (usb_lld_sys_shutdown, usb_lld_sys_init):
	Only cable config.

	* mcu/sys-stm32l4.c (usb_lld_sys_shutdown, usb_lld_sys_init):
	Likewise.

	* mcu/usb-st-common.c (usb_lld_init): Call chip specific routine.
	(usb_lld_shutdown): Likewise.

	* mcu/usb-stm32l4.c (usb_lld_init_chip_specific)
	(usb_lld_shutdown_chip_specific): New.

	* mcu/usb-stm32f103.c (usb_lld_init_chip_specific)
	(usb_lld_shutdown_chip_specific): New.

	* rules.mk (DEFS): Add -DUSE_SYS when USE_SYS.

2019-04-25  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart.h (BSCARD1, BSCARD2...): New.
	(BSCARD): Remove.

	* contrib/usart-stm32f103.c (usart_config_baud): Rename
	from usart_config_brr, changing API.
	* contrib/usart-stm32l4.c (usart_config_baud): Likewise.

2019-04-24  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/sys-stm32l4.c: New.
	* mcu/chx-stm32l4.c: New.  Not support suspend yet.
	* mcu/stm32l.h: New.
	* mcu/clk_gpio_init-stm32l.c: New.

2019-04-17  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32l4.c: New.
	* mcu/usb-st-common.c: Factor out from usb-stm32f103.c.

2019-04-12  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32l4.c: New.
	* contrib/usart-common.c: Factor out from usart-stm32f103.c.

	* entry.c [__ARM_ARCH_7EM__] (entry): Fix for Cortex-M4.

2019-04-11  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c: Support Cortex-M4 (not touching FPU).

2019-04-10  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/clk_gpio_init-stm32f.c: Rename from clk_gpio_init-stm32.c.

	* entry.c: Use STM32F10X_HD.
	* board/board-stbee.h (STM32F10X_HD): Add.
	* board/board-stm32-primer2.h (STM32F10X_HD): Add.

2019-04-09  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_block_sendrecv): Support